refactor, fix: исправлена ошибка отправки отправки ответа на PollAnswer + рефакторинг